--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ requests==2.32.3
 selenium==4.29.0
 six==1.17.0
 sniffio==1.3.1
-snowflake-connector-python==3.13.2
+snowflake-connector-python
 sortedcontainers==2.4.0
 stack-data==0.6.3
 tomlkit==0.13.2
